chore: Update dotnet.yml to specify project file in commands

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,13 +16,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore hello_mct.csproj
+
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build hello_mct.csproj --no-restore
+
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test hello_mct.csproj --no-build --verbosity normal
